--- a/ControleEstacionamento/packages.config
+++ b/ControleEstacionamento/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net46" />
@@ -26,5 +27,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="System.Data.SQLite" version="1.0.105.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.1" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
