--- a/ControleEstacionamento.Entidades/ControleEstacionamento.Entidades.csproj
+++ b/ControleEstacionamento.Entidades/ControleEstacionamento.Entidades.csproj
@@ -65,6 +65,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ControleEstacionamento.Lib\ControleEstacionamento.Lib.csproj">
+      <Project>{5fd4b4a8-82a0-4bdd-bc05-70141fe5511d}</Project>
+      <Name>ControleEstacionamento.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.1\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.1\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
