--- a/ControleEstacionamento/ControleEstacionamento.Web.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.Web.csproj
@@ -46,10 +46,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
@@ -157,6 +157,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TabelaPrecoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -199,6 +200,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\TabelaPreco\Create.cshtml" />
+    <Content Include="Views\TabelaPreco\Delete.cshtml" />
+    <Content Include="Views\TabelaPreco\Details.cshtml" />
+    <Content Include="Views\TabelaPreco\Edit.cshtml" />
+    <Content Include="Views\TabelaPreco\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -218,6 +224,20 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ControleEstacionamento.DAL\ControleEstacionamento.DAL.csproj">
+      <Project>{1e5429ea-a38c-4474-953f-c6dd5b3a2ce0}</Project>
+      <Name>ControleEstacionamento.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ControleEstacionamento.Entidades\ControleEstacionamento.Entidades.csproj">
+      <Project>{592799c9-0f4c-4420-b7bd-83f8eecc5048}</Project>
+      <Name>ControleEstacionamento.Entidades</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ControleEstacionamento.Lib\ControleEstacionamento.Lib.csproj">
+      <Project>{5fd4b4a8-82a0-4bdd-bc05-70141fe5511d}</Project>
+      <Name>ControleEstacionamento.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
