--- a/ControleEstacionamento/Views/Web.config
+++ b/ControleEstacionamento/Views/Web.config
@@ -34,6 +34,7 @@
   </system.webServer>
 
   <system.web>
+    <globalization uiCulture="pt-BR" culture="pt-BR" enableClientBasedCulture="true" requestEncoding="UTF-8" responseEncoding="UTF-8" fileEncoding="UTF-8" />
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
