--- a/ControleEstacionamento.Testes/ControleEstacionamento.Testes.csproj
+++ b/ControleEstacionamento.Testes/ControleEstacionamento.Testes.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="InclusaoTabelaPrecos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegrasNegocioTabelaPrecos.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
