--- a/ControleEstacionamento.DAL/ControleEstacionamento.DAL.csproj
+++ b/ControleEstacionamento.DAL/ControleEstacionamento.DAL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Base\IRepositorio.cs" />
     <Compile Include="Repositorios\Base\Repositorio.cs" />
+    <Compile Include="Repositorios\MovimentacaoVeiculoRepositorio.cs" />
     <Compile Include="Repositorios\TabelaPrecoRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
