--- a/ControleEstacionamento.Entidades/ControleEstacionamento.Entidades.csproj
+++ b/ControleEstacionamento.Entidades/ControleEstacionamento.Entidades.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MovimentacaoVeiculo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TabelaPreco.cs" />
   </ItemGroup>
