--- a/ControleEstacionamento/packages.config
+++ b/ControleEstacionamento/packages.config
@@ -5,6 +5,7 @@
   <package id="cldrjs" version="0.4.8" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
+  <package id="jQuery.InputMask" version="3.3.7" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
   <package id="jQuery.Validation.Globalize" version="1.1.0" targetFramework="net46" />
   <package id="jquery-globalize" version="1.2.3" targetFramework="net46" />
