--- a/ControleEstacionamento/ControleEstacionamento.Web.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.Web.csproj
@@ -152,7 +152,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MovimentacaoVeiculoController.cs" />
     <Compile Include="Controllers\TabelaPrecoController.cs" />
     <Compile Include="Global.asax.cs">
@@ -264,9 +263,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\TabelaPreco\Create.cshtml" />
     <Content Include="Views\TabelaPreco\Delete.cshtml" />
     <Content Include="Views\TabelaPreco\Details.cshtml" />
@@ -274,10 +270,10 @@
     <Content Include="Views\TabelaPreco\Index.cshtml" />
     <Content Include="Views\MovimentacaoVeiculo\Index.cshtml" />
     <Content Include="Views\MovimentacaoVeiculo\Registro.cshtml" />
+    <Content Include="Views\MovimentacaoVeiculo\VeiculosNoPatio.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
